--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -92,3 +92,5 @@ obj-$(CONFIG_OKL4_USER_VIPC)    += okl4-vipc.o
 obj-$(CONFIG_OKL4_GUEST)        += okl4-panic.o
 obj-$(CONFIG_OKL4_LINK_SHBUF)    += okl4-link-shbuf.o
 obj-$(CONFIG_MACH_XIAOMI_F9S) += hardware_info.o
+
+obj-$(CONFIG_FORCE_FAST_CHARGE) += fastchg.o
